# aptos-core

crates/aptos-faucet/: Cargo.toml
sdk/: Cargo.toml
sdk/src/: coin_client.rs  lib.rs  transaction_builder.rs
