[package]
name = "aptos-sdk"
version = "0.0.3"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "The Official Aptos SDK"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[features]
default = []
network = ["aptos-rest-client"]

[dependencies]
anyhow = "1.0.57"
aptos-crypto = { path = "../crates/aptos-crypto" }
aptos-global-constants = { path = "../config/global-constants" }
aptos-rest-client = { path = "../crates/aptos-rest-client", optional = true }
aptos-types = { path = "../types" }
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
cached-packages = { path = "../aptos-move/framework/cached-packages" }
move-core-types = { git = "https://github.com/move-language/move", features = ["address32"], rev = "2ceedb15751f586fc657b7e94325cacf9ed9629f" }
rand_core = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }

# Used by the examples.
[dev-dependencies]
once_cell = "1.13.0"
rand = "0.7.3"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
